<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosProgramador">


    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="#E32934"
        android:text="@string/Volver"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="87dp"
        android:layout_height="62dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pepsi" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:text="@string/Datos_Programador"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.603"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="210dp"
        android:layout_height="406dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="108dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/img_20221018_173930_456" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="70dp"
        android:text="Juan Puhl"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/btnLlamar"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#004883"
        android:text="@string/Llamar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnMail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnMail"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="#004883"
        android:text="@string/Correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>