<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="114dp"
        android:layout_height="108dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pepsi" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="278dp"
        android:layout_height="95dp"
        android:text="@string/pepsi_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColorLink="#004883"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.314" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="416dp"
        android:layout_height="375dp"
        android:layout_marginBottom="-80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/latas_pepsi" />

    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#E32934"
        android:text="@string/Volver"
        app:layout_constraintEnd_toStartOf="@+id/btnProgramador"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnProgramador"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#004883"
        android:text="@string/Programador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCerrar"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>